<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/teal_700"
    tools:context=".AddContactActivity">

    <LinearLayout
        android:id="@+id/login_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/layout_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/add_contact"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/first_name"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="12dp"
            android:id="@+id/fName_txt"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName"
            android:background="@drawable/field_background_rectangle"
            android:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/last_name"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/lName_txt"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            android:background="@drawable/field_background_rectangle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/email"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/email_txt"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:background="@drawable/field_background_rectangle"
            android:text="" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/phone_number"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/phone_txt"
            android:hint="@string/enter_phone_number"
            android:inputType="number|phone"
            android:background="@drawable/field_background_rectangle"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_weight="1"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/grey"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/add_btn"
                android:layout_weight="1"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/teal_700"
                android:layout_height="wrap_content"
                android:text="@string/add"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>