<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/user"
        android:contentDescription="@string/user_icon" />

    <TextView
        android:id="@+id/txName"
        android:layout_marginVertical="5dp"
        android:textColor="@color/teal_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txEmail"
        android:layout_marginVertical="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txPhone"
        android:layout_marginVertical="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="15sp" />

</LinearLayout>
